# codeverify

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release-drafter.yml  release.yml  stale.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_next_gen_features.py  003_verification_badges.py
apps/api/src/codeverify_api/: __init__.py  config.py  main.py  middleware.py
apps/api/src/codeverify_api/auth/: __init__.py  dependencies.py  github.py  jwt.py
apps/api/src/codeverify_api/db/: __init__.py  database.py  models.py  repositories.py  repository.py
apps/api/src/codeverify_api/middleware/: __init__.py  metrics.py  rate_limit.py  security.py  sentry.py
apps/api/src/codeverify_api/routers/: __init__.py  ai_drift.py  analyses.py  audit_logs.py  auth.py  autofix.py  badges.py  code_evolution.py  code_search.py  collaboration.py  compliance.py  consensus.py  context_analysis.py  continuous_learning.py  continuous_verification.py  copilot.py  cost_optimization.py  cross_language.py  cross_repo.py  debugger.py  dependency_scanner.py  diff_summarizer.py  export.py  feedback.py  fix_verification.py  formal_specs.py  hallucination.py  health.py  impact_analysis.py  internal.py  language_support.py  marketplace.py  network.py  nl_queries.py  notifications.py  organizations.py  paste_interception.py  policy_engine.py  public_api.py  regression.py  (+17 more)
apps/api/src/codeverify_api/services/: analysis_service.py  github_client.py  pdf_generator.py  usage_service.py  webhook_service.py
apps/api/src/codeverify_api/utils/: __init__.py  encryption.py
apps/api/tests/: test_api.py  test_new_routers.py
apps/api/tests/routers/: test_ai_drift.py  test_formal_spec_assistant.py  test_paste_interception.py
apps/github-app/: README.md  package-lock.json  package.json
apps/github-app/src/: index.ts
apps/web/: README.md  package-lock.json  package.json  tailwind.config.js
apps/web/e2e/: analysis.spec.ts  (+2 more)
apps/worker/: README.md  pyproject.toml
apps/worker/src/codeverify_worker/: __init__.py  main.py
apps/worker/src/codeverify_worker/tasks/: __init__.py  analysis.py
apps/worker/tests/: test_analysis.py
deploy/: README.md
deploy/kubernetes/: codeverify.yaml
deploy/terraform/: main.tf
docker/: Dockerfile.api  Dockerfile.github-app  Dockerfile.web  Dockerfile.worker  init-db.sql
docs/: BRANCH_PROTECTION.md  api-reference.md  custom-rules.md  database-schema.md  development-guide.md  enterprise-setup.md  getting-started.md  monitoring.md  nextgen-features.md  troubleshooting.md  verification.md
docs/adr/: 0000-adr-template.md  0001-monorepo-structure.md  0002-formal-verification-with-z3.md  0003-multi-agent-architecture.md  README.md
docs/api/: NEXTGEN_FEATURES.md  PUBLIC_API.md  WEBHOOK_EVENTS.md  openapi.json  openapi_generator.py
docs/architecture/: agents.md  data-flow.md  overview.md
docs/examples/: codeverify.full.yml  codeverify.minimal.yml  codeverify.python.yml  codeverify.typescript.yml
scripts/: benchmark.py  setup.sh  test.sh  test_rules.py  validate_env.py
tests/: test_e2e_integration.py
tests/integration/: test_api_integration.py  test_nextgen_features.py  test_nextgen_features_v2.py  test_worker_integration.py
tests/load/: README.md  locustfile.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/blog/: 2024-01-01-welcome.md  2026-01-15-why-formal-verification-matters.md  2026-01-20-z3-smt-solver-explained.md  2026-01-28-github-actions-integration.md  2026-02-02-v0.3-release.md  authors.yml
website/dashboard/: unified_dashboard.py
website/docs/: changelog.md  comparison.md  faq.md  intro.md  troubleshooting.md
website/scripts/: generate-social-card.js
(+80 files in other folders)
