[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeverify"
version = "0.1.0"
description = "AI-powered code review with formal verification"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jose David Baena", email = "jose@codeverify.dev" }
]
keywords = ["code-review", "formal-verification", "ai", "github", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://codeverify.dev"
Documentation = "https://docs.codeverify.dev"
Repository = "https://github.com/codeverify/codeverify"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/codeverify_core"]

# Shared dependencies for all Python packages
[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "black>=24.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["codeverify_core", "codeverify_api", "codeverify_worker", "codeverify_verifier", "codeverify_agents"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps/*/tests", "packages/*/tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]
