[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeverify-worker"
version = "0.1.0"
description = "CodeVerify Analysis Worker"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "structlog>=24.1.0",
    "z3-solver>=4.12.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "codeverify-core",
    "codeverify-verifier",
    "codeverify-agents",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codeverify_worker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
